common/sdl-parser/src/rules/relations/snapshots/parser__rules__relations__relations_engine__tests__one_to_many_relation_monodirectional_1.snap
---
source: common/parser/src/rules/relations/relations_engine.rs
expression: "&ctx.relations"
---
{
    "AuthorToPost": MetaRelation {
        name: "AuthorToPost",
        kind: OneToMany,
        relation: (
            Some(
                ModelName(
                    "Post",
                ),
            ),
            ModelName(
                "Author",
            ),
        ),
        birectional: false,
    },
}
