common/sdl-parser/src/rules/relations/snapshots/parser__rules__relations__relations_engine__tests__one_to_one_relation_bidirectionnal.snap
---
source: common/parser/src/rules/relations/relations_engine.rs
expression: "&ctx.relations"
---
{
    "AuthorToPost": MetaRelation {
        name: "AuthorToPost",
        kind: OneToOne,
        relation: (
            Some(
                ModelName(
                    "Author",
                ),
            ),
            ModelName(
                "Post",
            ),
        ),
        birectional: true,
    },
}
